tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/malformed-attribute-group.wyst
module syntax_bad_attr

#[inline
fn main() { }
